--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
 ```{r,echo=FALSE,results='hide'}
 opts_chunk[["set"]](fig.path='inst/figure/')
-library("ggplot2")
+suppresPackageStartupMessages({
+  library("ggplot2")
+})
 ```
 
 # R interface to the Huffpost Pollster API
@@ -25,6 +27,8 @@ library("pollster")
 
 # Examples
 
+## Charts
+
 To get a list of all the charts in the API use the function ``pollster_charts``,
 ```{r}
 charts <- pollster_charts()
@@ -39,6 +43,8 @@ For example, to get only charts related to national topics,
 ```{r}
 us_charts <- pollster_charts(state = "US")
 ```
+
+## Charts
 
 To get a particular chart use the function ``pollster_chart``.
 For example, to get the chart for [Barack Obama's Favorable Rating](http://elections.huffingtonpost.com/pollster/obama-favorable-rating), specify its *slug*, ``obama-favorable-rating``.
@@ -55,9 +61,10 @@ The historical estimates of the Huffpost Pollster poll-tracking model are contai
  + geom_line())
 ```
 
-To get the poll results for individual charts use the function ``pollster_polls`.
-The polls can be filtered by topic, chart, state, or date.
+## Polls
 
+To get the opinion poll results use the function ``pollster_polls`.
+The polls returned can be filtered by topic, chart, state, or date.
 
 By default, ``pollster_polls`` only returns 1 page of results (about 10 polls).
 To have it return more polls, increase the value of ``max_pages``.
