--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ For example, to get only charts related to national topics,
 us_charts <- pollster_charts(state = "US")
 ```
 
-## Charts
+## Chart
 
 To get a particular chart use the function ``pollster_chart``.
 For example, to get the chart for [Barack Obama's Favorable Rating](http://elections.huffingtonpost.com/pollster/obama-favorable-rating), specify its *slug*, ``obama-favorable-rating``.
