--- a/README.Rmd
+++ b/README.Rmd
@@ -20,19 +20,19 @@ You can install this with the function ``install_github`` in the **devtools** pa
 ```{r,eval=FALSE}
 install.packages("devools")
 library("devtools")
-install_github("jrnold/pollster")
+install_github("rOpenGov/pollstR")
 ```
 ```{r}
-library("pollster")
+library("pollstR")
 ```
 
 # Examples
 
 ## Charts
 
-To get a list of all the charts in the API use the function ``pollster_charts``,
+To get a list of all the charts in the API use the function ``pollstr_charts``,
 ```{r}
-charts <- pollster_charts()
+charts <- pollstr_charts()
 str(charts)
 ```
 This returns a ``list`` with two data frames.
@@ -42,18 +42,18 @@ while the data frame ``estimates`` has the current poll-tracking estimates from 
 The query can be filtered by state or topic.
 For example, to get only charts related to national topics,
 ```{r}
-us_charts <- pollster_charts(state = "US")
+us_charts <- pollstr_charts(state = "US")
 ```
 
 ## Chart
 
-To get a particular chart use the function ``pollster_chart``.
+To get a particular chart use the function ``pollstr_chart``.
 For example, to get the chart for [Barack Obama's Favorable Rating](http://elections.huffingtonpost.com/pollster/obama-favorable-rating), specify its *slug*, ``obama-favorable-rating``.
 ```{r}
-obama_favorable <- pollster_chart('obama-favorable-rating')
+obama_favorable <- pollstr_chart('obama-favorable-rating')
 str(obama_favorable)
 ```
-The slug can be found from the results of a ``pollster_charts`` query.
+The slug can be found from the results of a ``pollstr_charts`` query.
 Alternatively the slug is the path of the url of a chart, http://elections.huffingtonpost.com/pollster/obama-favorable-rating.
 
 The historical estimates of the Huffpost Pollster poll-tracking model are contained in the element ``"estimates_by_date"``,
@@ -64,15 +64,15 @@ The historical estimates of the Huffpost Pollster poll-tracking model are contai
 
 ## Polls
 
-To get the opinion poll results use the function ``pollster_polls`.
+To get the opinion poll results use the function ``pollstr_polls`.
 The polls returned can be filtered by topic, chart, state, or date.
 
-By default, ``pollster_polls`` only returns 1 page of results (about 10 polls).
+By default, ``pollstr_polls`` only returns 1 page of results (about 10 polls).
 To have it return more polls, increase the value of ``max_pages``.
 To have it return all polls, set the value of ``max_pages`` to a very high number.
 For example, to return all the polls on the favorability of Bararck Obama after March 1, 2014,
 ```{r}
-obama_favorable_polls <- pollster_polls(max_pages = 10000, chart = 'obama-favorable-rating', after = "2014-3-1")
+obama_favorable_polls <- pollstr_polls(max_pages = 10000, chart = 'obama-favorable-rating', after = "2014-3-1")
 str(obama_favorable_polls)	
 ```
 
@@ -85,6 +85,8 @@ Also see an earlier R interface by [Drew Linzer](https://github.com/dlinzer/poll
  -->
 <!--  LocalWords:  devools jrnold ggplot obama url aes favorability
  -->
-<!--  LocalWords:  Bararck
+<!--  LocalWords:  Bararck suppressPackageStartupMessages eval
  -->
 <!-- -->
+<!--  LocalWords:  rOpenGov pollstR pollstr Linzer
+ -->
