--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -6,9 +6,11 @@
 
 
 
-# R interface to the Huffpost Pollster API
+# R client for the Huffpost Pollster API
 
 This R package is an interface to the Huffington Post [Pollster API](http://elections.huffingtonpost.com/pollster/api), which provides access to opinion polls collected by the Huffington Post.
+
+The package is released under GPL-2 and the API data it accesses is released under the [Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License](http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US).
 
 # Install
 
@@ -28,13 +30,24 @@ library("pollstR")
 ```
 
 
-# Usage
+# API Overview
 
-There are three functions in that provide access to the opinion polls and model estimates from Huffpost Pollster.
+The Pollster API has two primary data structures: charts and polls.
+
+*Polls* are individual, dated topline results for a single set of candidates in a single race.
+The poll data structure consists of (generally) named candidates and percentage support for each, along with additional information (e.g., polling house, sampling frame, sample size, margin of error, state, etc.).
+
+*Charts* aggregate polls for a particular race or topic (e.g., "2012-president" or "obama-job-approval".
+A chart reports aggregated survey estimates of support for the candidates in a given race and, possibly, daily estimates of support.
+Each chart is named, reports the number of aggregated polls it presents, a last-updated date, and a "slug" field. The "slug" identifies the chart both in the API and on the Pollster website.
+
+In ``pollstR``, there are three functions in that provide access to the opinion polls and model estimates from Huffpost Pollster.
 
 - ``pollstr_charts``: Get a list of all charts and the current model estimates.
 - ``pollstr_chart``: Get a single chart along with historical model estimates.
 - ``pollstr_polls``: Get opinion poll data.
+
+# Examples
 
 ## Charts
 
@@ -88,33 +101,37 @@ For example, to get the chart for [Barack Obama's Favorable Rating](http://elect
 
 ```r
 obama_favorable <- pollstr_chart('obama-favorable-rating')
-str(obama_favorable)
+print(obama_favorable)
 ```
 
 ```
-#> List of 11
-#>  $ title            : chr "Barack Obama Favorable Rating"
-#>  $ slug             : chr "obama-favorable-rating"
-#>  $ topic            : chr "favorable-ratings"
-#>  $ state            : chr "US"
-#>  $ short_title      : chr "Obama Favorability"
-#>  $ election_date    : Date[1:1], format: NA
-#>  $ poll_count       : num 804
-#>  $ last_updated     : POSIXct[1:1], format: "2014-04-25 14:39:16"
-#>  $ url              : chr "http://elections.huffingtonpost.com/pollster/obama-favorable-rating"
-#>  $ estimates        :'data.frame':	4 obs. of  7 variables:
-#>   ..$ choice         : Factor w/ 4 levels "Favorable","Unfavorable",..: 1 2 3 4
-#>   ..$ value          : num [1:4] 45.7 49 4.5 0.2
-#>   ..$ lead_confidence: logi [1:4] NA NA NA NA
-#>   ..$ first_name     : logi [1:4] NA NA NA NA
-#>   ..$ last_name      : logi [1:4] NA NA NA NA
-#>   ..$ party          : logi [1:4] NA NA NA NA
-#>   ..$ incumbent      : logi [1:4] NA NA NA NA
-#>  $ estimates_by_date:'data.frame':	2123 obs. of  3 variables:
-#>   ..$ choice: Factor w/ 6 levels "Favorable","Undecided",..: 1 2 3 1 2 3 4 1 2 3 ...
-#>   ..$ value : num [1:2123] 45.7 4.5 49 45.7 4.4 49 0.2 45.7 4.4 49 ...
-#>   ..$ date  : Date[1:2123], format: "2014-04-21" ...
-#>  - attr(*, "class")= chr "pollstr_chart"
+#> Title:       Barack Obama Favorable Rating 
+#> Chart Slug:  obama-favorable-rating 
+#> Topic:       favorable-ratings 
+#> State:       US 
+#> Polls:       804 
+#> Updated:     1.398e+09 
+#> URL:         http://elections.huffingtonpost.com/pollster/obama-favorable-rating 
+#> Estimates:
+#>             choice value lead_confidence first_name last_name party
+#> 1        Favorable  45.7              NA         NA        NA    NA
+#> 2      Unfavorable  49.0              NA         NA        NA    NA
+#> 3        Undecided   4.5              NA         NA        NA    NA
+#> 4 Not Heard Enough   0.2              NA         NA        NA    NA
+#>   incumbent
+#> 1        NA
+#> 2        NA
+#> 3        NA
+#> 4        NA
+#> 
+#> First 6 (of 2123) daily estimates:
+#>        choice value       date
+#> 1   Favorable  45.7 2014-04-21
+#> 2   Undecided   4.5 2014-04-21
+#> 3 Unfavorable  49.0 2014-04-21
+#> 4   Favorable  45.7 2014-04-15
+#> 5   Undecided   4.4 2014-04-15
+#> 6 Unfavorable  49.0 2014-04-15
 ```
 
 The slug can be found from the results of a ``pollstr_charts`` query.
