--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,8 @@ suppressPackageStartupMessages({
 })
 ```
 
+[![Build Status](https://travis-ci.org/rOpenGov/pollstR.svg?branch=master)](https://travis-ci.org/rOpenGov/pollstR)
+
 # R client for the Huffpost Pollster API
 
 This R package is an interface to the Huffington Post [Pollster API](http://elections.huffingtonpost.com/pollster/api), which provides access to opinion polls collected by the Huffington Post.
