--- a/inst/vign/introduction.Rmd
+++ b/inst/vign/introduction.Rmd
@@ -4,187 +4,26 @@
 -->
 
 ```{r, echo = FALSE, results='hide', message = FALSE}
-library("dplyr")
-library("ggplot2")
+suppressPackageStartupMessages({
+  library("dplyr")
+  library("ggplot2")
+  library("pollstR")
+})
 knitr::opts_chunk$set(
-  fig.path = 'inst/vign/figures/',
+  fig.path = './figures/',
   comment = "#>",
   error = FALSE,
   tidy = FALSE)
 ```
 
-# R client for the Huffpost Pollster API
-
-This R package is an interface to the Huffington Post [Pollster API](http://elections.huffingtonpost.com/pollster/api), which provides access to opinion polls collected by the Huffington Post.
-
-The package is released under GPL-2 and the API data it accesses is released under the [Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License](http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US).
-
-# Install
-
-This package is not *yet* on CRAN.
-
-You can install this with the function ``install_github`` in the **devtools** package.
-```{r,eval=FALSE}
-install.packages("devools")
-library("devtools")
-install_github("rOpenGov/pollstR")
-```
-```{r}
-library("pollstR")
+```{r intro, child = './children/intro.Rmd'}
 ```
 
-# API Overview
-
-The Pollster API has two primary data structures: charts and polls.
-
-*Polls* are individual, dated topline results for a single set of candidates in a single race.
-The poll data structure consists of (generally) named candidates and percentage support for each, along with additional information (e.g., polling house, sampling frame, sample size, margin of error, state, etc.).
-
-*Charts* aggregate polls for a particular race or topic (e.g., "2012-president" or "obama-job-approval".
-A chart reports aggregated survey estimates of support for the candidates in a given race and, possibly, daily estimates of support.
-Each chart is named, reports the number of aggregated polls it presents, a last-updated date, and a "slug" field. The "slug" identifies the chart both in the API and on the Pollster website.
-
-In ``pollstR``, there are three functions in that provide access to the opinion polls and model estimates from Huffpost Pollster.
-
-- ``pollstr_charts``: Get a list of all charts and the current model estimates.
-- ``pollstr_chart``: Get a single chart along with historical model estimates.
-- ``pollstr_polls``: Get opinion poll data.
-
-# Examples
-
-## Charts
-
-To get a list of all the charts in the API use the function ``pollstr_charts``,
-```{r}
-charts <- pollstr_charts()
-str(charts)
-```
-This returns a ``list`` with two data frames.
-The data frame ``charts`` has data on each chart,
-while the data frame ``estimates`` has the current poll-tracking estimates from each chart.
-
-The query can be filtered by state or topic.
-For example, to get only charts related to national topics,
-```{r}
-us_charts <- pollstr_charts(state = "US")
+```{r install, child = './children/api-overview.Rmd'}
 ```
 
-## Chart
-
-To get a particular chart use the function ``pollstr_chart``.
-For example, to get the chart for [Barack Obama's Favorable Rating](http://elections.huffingtonpost.com/pollster/obama-favorable-rating), specify its *slug*, ``obama-favorable-rating``.
-```{r}
-obama_favorable <- pollstr_chart('obama-favorable-rating')
-print(obama_favorable)
+```{r install, child = './children/example-obamas-approval.Rmd'}
 ```
-The slug can be found from the results of a ``pollstr_charts`` query.
-Alternatively the slug is the path of the url of a chart, http://elections.huffingtonpost.com/pollster/obama-favorable-rating.
-
-The historical estimates of the Huffpost Pollster poll-tracking model are contained in the element ``"estimates_by_date"``,
-```{r obama-favorable-chart}
-(ggplot(obama_favorable[["estimates_by_date"]], aes(x = date, y = value, color = choice))
- + geom_line())
-```
-
-## Polls
-
-To get the opinion poll results use the function ``pollstr_polls`.
-The polls returned can be filtered by topic, chart, state, or date.
-
-By default, ``pollstr_polls`` only returns 1 page of results (about 10 polls).
-To have it return more polls, increase the value of ``max_pages``.
-To have it return all polls, set the value of ``max_pages`` to a very high number.
-For example, to return all the polls on the favorability of Bararck Obama after March 1, 2014,
-```{r}
-obama_favorable_polls <- pollstr_polls(max_pages = 10000, chart = 'obama-favorable-rating', after = "2014-3-1")
-str(obama_favorable_polls)	
-```
-
-# Example: Obama's Job Approval Rating
-
-This section shows how to use ``pollstr`` to create a chart similar to those displayed on the Huffpost Pollster website.
-I'll use Obama's job approval rating in this example.
-
-The slug or name of the chart is ``obama-job-approval``, which is derived from the chart's URL , http://elections.huffingtonpost.com/pollster/obama-job-approval.
-I'll focus on approval in 2013 in order to reduce the time necessary to run this code.
-```{r}
-slug <- "obama-job-approval"
-start_date <- as.Date("2013-1-1")
-end_date <- as.Date("2014-1-1")
-```
-For the plot, I'll need both Pollster's model estimates and opinion poll estimates.
-I get the Pollster model estimates using ``polster_chart``,
-```{r}
-chart <- pollstr_chart(slug)
-estimates <- chart[["estimates_by_date"]]
-
-estimates <- estimates[estimates$date >= start_date 
-                       & estimates$date < end_date, ]
-```
-and the opinion poll results,
-```{r}
-polls <- pollstr_polls(chart = slug, 
-                        after = start_date, 
-                        before = end_date,
-                        max_pages = 1000000)
-```
-Note that in ``polster_poll`` I set the ``max_pages`` argument to a very large number in order to download all the polls available.
-This may take several minutes.
-
-Before continuing, we will need to clean up the opinion poll data.
-First, only keep results from national subpopulations ("Adults", "Likely Voters", "Registered Voters").
-This will drop subpopulations like Republicans, Democrats, and Independents.
-```{r}
-questions <-
-    subset(polls[["questions"]],
-           chart == slug
-           & subpopulation %in% c("Adults", "Likely Voters", "Registered Voters"))
-
-```
-Second, I will need to recode the choices into three categories, "Approve", "Disapprove", and "Undecided".
-```{r}
-approvalcat <- c("Approve" = "Approve",
-                 "Disapprove" = "Disapprove",
-                 "Undecided" = "Undecided",
-                 "Neither" = "Undecided",
-                 "Refused" = NA,
-                 "Neutral" = "Undecided",
-                 "Strongly Approve" = "Approve",
-                 "Somewhat Approve" = "Approve", 
-                 "Somewhat Disapprove" = "Disapprove",
-                 "Strongly Disapprove" = "Disapprove")
-
-questions2 <-
-    (questions
-     %.% mutate(choice = plyr::revalue(choice, approvalcat))
-     %.% group_by(id, subpopulation, choice)
-     %.% summarise(value = sum(value)))
-```
-Now merge the question data with the poll metadata,
-```{r}
-polldata <- merge(polls$polls, questions2, by = "id")
-```
-
-Now, I can plot the opinion poll results along with the Huffpost Pollster trend estimates,
-```{r obama-favorable-chart-2}
-(ggplot()
- + geom_point(data = polldata,
-              mapping = aes(y = value, x = end_date, color = choice),
-              alpha = 0.3)
- + geom_line(data = estimates,
-             mapping = aes(y = value, x = date, color = choice))
- + scale_x_date("date")
- + scale_color_manual(values = c("Approve" = "black", 
-                                 "Disapprove" = "red", 
-                                 "Undecided" = "blue"))
- )
-
-
-```
-
-# Misc
-
-An earlier R interface to the Pollster API was written by [Drew Linzer](https://github.com/dlinzer/pollstR/).
 
 <!--  LocalWords:  Huffpost API Huffington CRAN github devtools str
  -->
