fixing R CMD check errors
Moving around files to remove "No such vignette" error in R CMD check.
I'm still not sure why this works, but it seems to get rid of that

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ```{r,echo=FALSE,results='hide'}
-opts_chunk[["set"]](fig.path='figures/', errors = FALSE)
+opts_chunk[["set"]](fig.path='README-figures/', errors = FALSE)
 suppressPackageStartupMessages({
 library("ggplot2")
 library("pollstR")
