minor edit to vignette
Removed dummy R code

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -44,24 +44,24 @@ str(charts)
 ```
 #> List of 2
 #>  $ charts   :'data.frame':	444 obs. of  9 variables:
-#>   ..$ title        : Factor w/ 444 levels "2012 Iowa GOP Primary",..: 1 2 3 4 5 6 7 8 9 10 ...
-#>   ..$ slug         : Factor w/ 443 levels "2012-iowa-gop-primary",..: 1 2 3 4 5 6 7 8 9 10 ...
-#>   ..$ topic        : Factor w/ 27 levels "2012-president-gop-primary",..: 1 1 1 1 1 1 1 1 2 3 ...
+#>   ..$ title        : chr [1:444] "2012 Iowa GOP Primary" "2012 New Hampshire GOP Primary" "2012 South Carolina GOP Primary" "2012 Florida GOP Primary" ...
+#>   ..$ slug         : chr [1:444] "2012-iowa-gop-primary" "2012-new-hampshire-gop-primary" "2012-south-carolina-gop-primary" "2012-florida-gop-primary" ...
+#>   ..$ topic        : chr [1:444] "2012-president-gop-primary" "2012-president-gop-primary" "2012-president-gop-primary" "2012-president-gop-primary" ...
 #>   ..$ state        : Factor w/ 51 levels "IA","NH","SC",..: 1 2 3 4 5 6 7 8 8 8 ...
-#>   ..$ short_title  : Factor w/ 444 levels "1/3 Iowa Caucus",..: 1 2 3 4 5 6 7 8 9 10 ...
+#>   ..$ short_title  : chr [1:444] "1/3 Iowa Caucus" "1/10 New Hampshire Primary" "1/21 South Carolina Primary" "1/31 Florida Primary" ...
 #>   ..$ election_date: Date[1:444], format: NA ...
-#>   ..$ poll_count   : num [1:444] 65 55 44 59 10 34 19 258 589 300 ...
+#>   ..$ poll_count   : int [1:444] 65 55 44 59 10 34 19 258 589 300 ...
 #>   ..$ last_updated : POSIXct[1:444], format: "2012-01-02 13:08:44" ...
-#>   ..$ url          : Factor w/ 443 levels "http://elections.huffingtonpost.com/pollster/2012-iowa-gop-primary",..: 1 2 3 4 5 6 7 8 9 10 ...
-#>  $ estimates:'data.frame':	1052 obs. of  8 variables:
-#>   ..$ choice         : Factor w/ 319 levels "Romney","Paul",..: 1 2 3 4 5 6 7 8 9 1 ...
-#>   ..$ value          : num [1:1052] 22.5 21.3 15.9 12.6 11.1 8.3 3.7 5.9 0.9 39.6 ...
-#>   ..$ lead_confidence: num [1:1052] NA NA NA NA NA NA NA NA NA NA ...
-#>   ..$ first_name     : chr [1:1052] "Mitt" "Ron" "Rick" "Newt" ...
-#>   ..$ last_name      : chr [1:1052] "Romney" "Paul" "Santorum" "Gingrich" ...
-#>   ..$ party          : chr [1:1052] "Rep" "Rep" "Rep" "Rep" ...
-#>   ..$ incumbent      : logi [1:1052] FALSE FALSE FALSE FALSE FALSE FALSE ...
-#>   ..$ slug           : chr [1:1052] "2012-iowa-gop-primary" "2012-iowa-gop-primary" "2012-iowa-gop-primary" "2012-iowa-gop-primary" ...
+#>   ..$ url          : chr [1:444] "http://elections.huffingtonpost.com/pollster/2012-iowa-gop-primary" "http://elections.huffingtonpost.com/pollster/2012-new-hampshire-gop-primary" "http://elections.huffingtonpost.com/pollster/2012-south-carolina-gop-primary" "http://elections.huffingtonpost.com/pollster/2012-florida-gop-primary" ...
+#>  $ estimates:'data.frame':	1051 obs. of  8 variables:
+#>   ..$ choice         : chr [1:1051] "Romney" "Paul" "Santorum" "Gingrich" ...
+#>   ..$ value          : num [1:1051] 22.5 21.3 15.9 12.6 11.1 8.3 3.7 5.9 0.9 39.6 ...
+#>   ..$ lead_confidence: num [1:1051] NA NA NA NA NA NA NA NA NA NA ...
+#>   ..$ first_name     : chr [1:1051] "Mitt" "Ron" "Rick" "Newt" ...
+#>   ..$ last_name      : chr [1:1051] "Romney" "Paul" "Santorum" "Gingrich" ...
+#>   ..$ party          : Factor w/ 6 levels "Dem","Gre","ind",..: 6 6 6 6 6 6 6 NA NA 6 ...
+#>   ..$ incumbent      : logi [1:1051] FALSE FALSE FALSE FALSE FALSE FALSE ...
+#>   ..$ slug           : chr [1:1051] "2012-iowa-gop-primary" "2012-iowa-gop-primary" "2012-iowa-gop-primary" "2012-iowa-gop-primary" ...
 #>  - attr(*, "class")= chr "pollstr_charts"
 ```
 
@@ -91,17 +91,17 @@ print(obama_favorable)
 #> Title:       Barack Obama Favorable Rating 
 #> Chart Slug:  obama-favorable-rating 
 #> Topic:       favorable-ratings 
-#> State:       US 
+#> State:       1 
 #> Polls:       805 
 #> Updated:     1.399e+09 
 #> URL:         http://elections.huffingtonpost.com/pollster/obama-favorable-rating 
 #> Estimates:
 #>             choice value lead_confidence first_name last_name party
-#> 1        Favorable  45.6              NA         NA        NA    NA
-#> 2      Unfavorable  48.5              NA         NA        NA    NA
-#> 3        Undecided   4.1              NA         NA        NA    NA
-#> 4          Neutral  12.6              NA         NA        NA    NA
-#> 5 Not Heard Enough   0.2              NA         NA        NA    NA
+#> 1        Favorable  45.6              NA       <NA>      <NA>  <NA>
+#> 2      Unfavorable  48.5              NA       <NA>      <NA>  <NA>
+#> 3        Undecided   4.1              NA       <NA>      <NA>  <NA>
+#> 4          Neutral  12.6              NA       <NA>      <NA>  <NA>
+#> 5 Not Heard Enough   0.2              NA       <NA>      <NA>  <NA>
 #>   incumbent
 #> 1        NA
 #> 2        NA
@@ -150,30 +150,30 @@ str(obama_favorable_polls)
 ```
 #> List of 2
 #>  $ polls    :'data.frame':	16 obs. of  9 variables:
-#>   ..$ id           : num [1:16] 19357 19316 19256 19261 19252 ...
+#>   ..$ id           : int [1:16] 19357 19316 19256 19261 19252 19239 19169 19132 19137 19172 ...
 #>   ..$ pollster     : Factor w/ 8 levels "NBC/WSJ","YouGov/Economist",..: 1 2 3 2 4 2 2 2 5 6 ...
 #>   ..$ start_date   : Date[1:16], format: "2014-04-23" ...
 #>   ..$ end_date     : Date[1:16], format: "2014-04-27" ...
 #>   ..$ method       : Factor w/ 2 levels "Phone","Internet": 1 2 1 2 1 2 2 2 2 1 ...
-#>   ..$ source       : Factor w/ 16 levels "http://msnbcmedia.msn.com/i/MSNBC/Sections/A_Politics/14271_APRIL_NBC_WSJ_Poll.pdf",..: 1 2 3 4 5 6 7 8 9 10 ...
+#>   ..$ source       : chr [1:16] "http://msnbcmedia.msn.com/i/MSNBC/Sections/A_Politics/14271_APRIL_NBC_WSJ_Poll.pdf" "http://d25d2506sfb94s.cloudfront.net/cumulus_uploads/document/lx2kkwdvcu/econToplines.pdf" "http://www.foxnews.com/politics/interactive/2014/04/21/fox-news-poll-independents-more-likely-to-back-anti-obamacare-candidates"| __truncated__ "http://d25d2506sfb94s.cloudfront.net/cumulus_uploads/document/8cnxcwv20i/econToplines.pdf" ...
 #>   ..$ last_updated : POSIXct[1:16], format: "2014-04-30 20:01:58" ...
 #>   ..$ survey_houses: chr [1:16] "" "" "" "" ...
 #>   ..$ sponsors     : chr [1:16] "" "" "" "" ...
 #>  $ questions:'data.frame':	1042 obs. of  14 variables:
 #>   ..$ question       : Factor w/ 33 levels "2014 National House Race",..: 1 1 1 2 2 2 2 3 3 3 ...
-#>   ..$ chart          : chr [1:1042] "2014-national-house-race" "2014-national-house-race" "2014-national-house-race" "us-right-direction-wrong-track" ...
-#>   ..$ topic          : chr [1:1042] "2014-house" "2014-house" "2014-house" "" ...
-#>   ..$ state          : chr [1:1042] "US" "US" "US" "US" ...
+#>   ..$ chart          : Factor w/ 31 levels "2014-national-house-race",..: 1 1 1 31 31 31 31 21 21 21 ...
+#>   ..$ topic          : Factor w/ 7 levels "","2014-house",..: 2 2 2 1 1 1 1 7 7 7 ...
+#>   ..$ state          : Factor w/ 1 level "US": 1 1 1 1 1 1 1 1 1 1 ...
 #>   ..$ subpopulation  : Factor w/ 12 levels "Registered Voters",..: 1 1 1 2 2 2 2 2 2 2 ...
-#>   ..$ observations   : num [1:1042] NA NA NA 1000 1000 1000 1000 1000 1000 1000 ...
+#>   ..$ observations   : int [1:1042] NA NA NA 1000 1000 1000 1000 1000 1000 1000 ...
 #>   ..$ margin_of_error: num [1:1042] NA NA NA 3.1 3.1 3.1 3.1 3.1 3.1 3.1 ...
-#>   ..$ choice         : Factor w/ 78 levels "Democrat","Republican",..: 1 2 3 4 5 6 3 7 8 3 ...
+#>   ..$ choice         : chr [1:1042] "Democrat" "Republican" "Undecided" "Right Direction" ...
 #>   ..$ value          : num [1:1042] 45 45 10 27 63 6 4 44 50 6 ...
 #>   ..$ first_name     : chr [1:1042] NA NA NA NA ...
 #>   ..$ last_name      : chr [1:1042] NA NA NA NA ...
-#>   ..$ party          : chr [1:1042] "Dem" "Rep" NA NA ...
+#>   ..$ party          : Factor w/ 3 levels "Dem","ind","Rep": 1 3 NA NA NA NA NA NA NA NA ...
 #>   ..$ incumbent      : logi [1:1042] FALSE FALSE NA NA NA NA ...
-#>   ..$ id             : num [1:1042] 19357 19357 19357 19357 19357 ...
+#>   ..$ id             : int [1:1042] 19357 19357 19357 19357 19357 19357 19357 19357 19357 19357 ...
 #>  - attr(*, "class")= chr "pollstr_polls"
 ```
 
@@ -285,11 +285,6 @@ Now, I can plot the opinion poll results along with the Huffpost Pollster trend 
  -->
 <!--  LocalWords:  Bararck
  -->
-
-
-```{r echo=FALSE,results='hide'}
-NULL
-```
 
 
 <!--  LocalWords:  Huffpost API Huffington CRAN github devtools str
