update README and vignette
- added section on error messages in functions
- figure names changed due to update in knitr

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,9 @@ library("dplyr")
 ```{r install, child = 'inst/vign/children/install.Rmd'}
 ```
 
+```{r install, child = 'inst/vign/children/bugs.Rmd'}
+```
+
 ```{r install, child = 'inst/vign/children/api-overview.Rmd'}
 ```
 
