--- a/inst/vign/introduction.Rmd
+++ b/inst/vign/introduction.Rmd
@@ -22,6 +22,9 @@ knitr::opts_chunk$set(
 ```{r install, child = './children/api-overview.Rmd'}
 ```
 
+```{r intro, child = './children/bugs.Rmd'}
+```
+
 ```{r install, child = './children/example-obamas-approval.Rmd'}
 ```
 
