--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 pollstR News
 
+CHANGES IN 1.2.0
+
+* Add showall argument to pollstr_charts and pollstr_polls
+
 CHANGES IN 1.1.1
 
 * Bugfix: ensure that character vectors do not get converted to factors
