--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ library("dplyr")
 
 [![Build Status](https://travis-ci.org/rOpenGov/pollstR.svg?branch=master)](https://travis-ci.org/rOpenGov/pollstR)
 
-# pollstR: An R Client for the HuffPost Pollster API"
+# pollstR: An R Client for the HuffPost Pollster API
 
 ```{r intro, child = 'inst/vign-src/children/intro.Rmd'}
 ```
