--- a/inst/vign-src/children/api-overview.Rmd
+++ b/inst/vign-src/children/api-overview.Rmd
@@ -9,56 +9,18 @@ The poll data structure consists of (generally) named candidates and percentage 
 A chart reports aggregated survey estimates of support for the candidates in a given race and, possibly, daily estimates of support.
 Each chart is named, reports the number of aggregated polls it presents, a last-updated date, and a "slug" field. The "slug" identifies the chart both in the API and on the Pollster website.
 
-In ``pollstR``, there are three functions in that provide access to the opinion polls and model estimates from Huffpost Pollster.
+See the [Huffpost Pollster API](http://elections.huffingtonpost.com/pollster/api) for the full description and documentation of the API.
 
-- ``pollstr_charts``: Get a list of all charts and the current model estimates.
-- ``pollstr_chart``: Get a single chart along with historical model estimates.
-- ``pollstr_polls``: Get opinion poll data.
+The **pollstR** package has four main functions:
 
-## Charts
+- `pollster_charts`: Information about all charts available. [API](http://elections.huffingtonpost.com/pollster/api#charts)
+- `pollster_chart`:  Data on an individual chart, including the estimates by date. It does not include the poll data used to construct
+    those estimates. See `pollster_chart_data` for that. [API](http://elections.huffingtonpost.com/pollster/api#chart)
+- `pollster_chart_data`: The polls used in a chart. [API](http://elections.huffingtonpost.com/pollster/api#chart-csv)
+- `pollster_polls`: Query and retrieve all polls available through the Pollster API. [API](http://elections.huffingtonpost.com/pollster/api#polls)
 
-To get a list of all the charts in the API use the function ``pollstr_charts``,
-```{r}
-charts <- pollstr_charts()
-str(charts)
-```
-This returns a ``list`` with two data frames.
-The data frame ``charts`` has data on each chart,
-while the data frame ``estimates`` has the current poll-tracking estimates from each chart.
+These **pollstR** functions have two main purposes: create the url to retrieve data, and 
+more importantly, convert the results returned by the API to into data structures more amenable to
+analysis in R. The API results are usually trees; the **pollstR** functions converts them 
+into data frames or lists of tidy data frames.
 
-The query can be filtered by state or topic.
-For example, to get only charts related to national topics,
-```{r}
-us_charts <- pollstr_charts(state = "US")
-```
-
-## Chart
-
-To get a particular chart use the function ``pollstr_chart``.
-For example, to get the chart for [Barack Obama's Favorable Rating](http://elections.huffingtonpost.com/pollster/obama-favorable-rating), specify its *slug*, ``obama-favorable-rating``.
-```{r}
-obama_favorable <- pollstr_chart('obama-favorable-rating')
-print(obama_favorable)
-```
-The slug can be found from the results of a ``pollstr_charts`` query.
-Alternatively the slug is the path of the url of a chart, http://elections.huffingtonpost.com/pollster/obama-favorable-rating.
-
-The historical estimates of the Huffpost Pollster poll-tracking model are contained in the element ``"estimates_by_date"``,
-```{r obama-favorable-chart}
-(ggplot(obama_favorable[["estimates_by_date"]], aes(x = date, y = value, color = choice))
- + geom_line())
-```
-
-## Polls
-
-To get the opinion poll results use the function ``pollstr_polls`.
-The polls returned can be filtered by topic, chart, state, or date.
-
-By default, ``pollstr_polls`` only returns 1 page of results (about 10 polls).
-To have it return more polls, increase the value of ``max_pages``.
-To have it return all polls, set the value of ``max_pages`` to a very high number.
-For example, to return all the polls on the favorability of Bararck Obama after March 1, 2014,
-```{r}
-obama_favorable_polls <- pollstr_polls(max_pages = 10000, chart = 'obama-favorable-rating', after = "2014-3-1")
-str(obama_favorable_polls)	
-```
