--- a/inst/vign-src/children/install.Rmd
+++ b/inst/vign-src/children/install.Rmd
@@ -1,16 +1,12 @@
 # Install
 
 You can install the stable version on [CRAN](http://cran.r-project.org/package=pollstR):
-```{r, eval = FALSE}
+```{r, install_cran,eval = FALSE}
 install.packages('pollstR', dependencies = TRUE)
 ```
 
-You can install the development version from github with the function ``install_github`` in the **devtools** package.
-```{r, eval = FALSE}
-install.packages("devools")
+To install the very latest version, since the CRAN version use **devtools**,
+```{r install_devtools,eval=FALSE}
 library("devtools")
 install_github("rOpenGov/pollstR")
-```
-```{r}
-library("pollstR")
 ```
